--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Aliso AV</h1>
-								<p>Productions meant for <b>you</b>.</p>
+								<p>Audio Visual productions meant for <u><b>you</b></u>u>.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#audio">Audio</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -40,11 +40,12 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
+							<article id="audio">
+								<h2 class="major">Audio</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Aliso AV has got your back when it comes to audio. Aliso AV provides professional audio for every event from a formal dance to the spookiest of Halloween parties. Audio services include a DJ upon request or simply a playlist, additionally special tracks can be shuffled in for mid-event performances.</p>
+								<h3>Professional Hype</h3>
+								<p>Aliso AV's top notch DJs know how to get a party started! Aliso AV's DJs can create hype for any situation, bringing a party from 0 to rave-like in seconds.</p>
 							</article>
 
 						<!-- Work -->
