--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<h2 class="major">Audio</h2>
 								<span class="image main"><img src="images/board.jpg" alt="" /></span>
 								<p>Aliso AV has got your back when it comes to audio. Aliso AV provides professional audio for every event from a formal dance to the spookiest of Halloween parties. Audio services include a DJ upon request or simply a playlist.</p>
-								<h3>Professional Hype</h3>
+								<h2>Professional Hype</h2>
 								<span class="image main"><img src="images/dj.jpg" alt="" /></span>
 								<p>Aliso AV's top notch DJs know how to get a party started! Aliso AV's DJs can create hype for any situation, bringing a party from 0 to rave-like in seconds.</p>
 							</article>
@@ -71,12 +71,12 @@
 								<p>Aliso AV is based out of Aliso Niguel High School's ASB media department in Aliso Viejo, CA. We serve our Aliso area schools and surrounding communities.</p>
 								<p>Our mission is to deliver high-quality event experiences regardless of financial means. We are committed to providing reasonable cost options, ensuring that everyone can participate in and enjoy the excellence we offer. Through innovation, we aim to maintain the highest standards in our productions.</p>
 								<h2 class="major">Founders</h2>
-								<div id ="Wyatt" style="display:inline-block">
+								<div id ="Wyatt" style="display:inline-block, padding-left:10px, padding-top:10px">
 									<span class="image left"><img src="images/wyatt_temp.jpg" alt="" /></span>
 									<h3>Wyatt</h3>
 									<p>Insert bio</p>
 								</div>
-								<div id ="Troy" style="display:inline-block">
+								<div id ="Troy" style="display:inline-block, padding-left:10px, padding-top:10px">
 									<span class="image right"><img src="images/troy.jpeg" alt="" /></span>
 									<h3>Troy</h3>
 									<p>Insert bio</p>
