--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
 								<h2 class="major">Founders</h2>
 								<div id ="Wyatt" style="display:inline-block">
 									<span class="image left"><img src="images/wyatt_temp.jpg" alt="" /></span>
-									<h3 style="margin-left:10px">Wyatt</h3>
-									<p style="margin-left:10px">Insert bio</p>
+									<h3>Wyatt</h3>
+									<p>Insert bio</p>
 								</div>
+								<hr>
 								<div id ="Troy" style="display:inline-block">
 									<span class="image right"><img src="images/troy.jpeg" alt="" /></span>
-									<h3 style="margin-left:10px">Troy</h3>
-									<p style="margin-left:10px">Insert bio</p>
+									<h3>Troy</h3>
+									<p>Insert bio</p>
 								</div>
 							</article>
 						
