--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
 									<p>Insert bio</p>
 								</div>
 								<hr>
+								<div id ="Daniel" style="display:inline-block">
+									<span class="image right"><img src="images/daniel.jpeg" alt="" /></span>
+									<h3>Daniel</h3>
+									<p>Insert bio</p>
+								</div>
+								<hr>
+								<div id ="Russ" style="display:inline-block">
+									<span class="image right"><img src="images/russ.jpeg" alt="" /></span>
+									<h3>Russ</h3>
+									<p>Insert bio</p>
+								</div>
+								<hr>
 								<div id ="Troy" style="display:inline-block">
 									<span class="image right"><img src="images/troy.jpeg" alt="" /></span>
 									<h3>Troy</h3>
