--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								</div>
 								<hr>
 								<div id ="Russ" style="display:inline-block">
-									<span class="image right"><img src="images/russ.jpeg" alt="" /></span>
+									<span class="image left"><img src="images/russ.jpeg" alt="" /></span>
 									<h3>Russ</h3>
 									<p>Insert bio</p>
 								</div>
