--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
+								<footer>
+									<p class="copyright">28000 Wolverine Way, Aliso Viejo CA 92656</p>
+									<p class="copyright"><a href="mailto:example@example.com">example@example.com</a></p>
+								</footer>
 								<ul class="icons">
 									<li><a href="https://www.instagram.com" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
