--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
 						<!-- Lights -->
 							<article id="lights">
 								<h2 class="major">Lighting</h2>
+								<!-- Slideshow container -->
+								<div class="slideshow-container">
+								
+								  <!-- Full-width images with number and caption text -->
+								  <div class="mySlides fade">
+								    <img src="images/lighting_ss/lighting_comp.jpg" style="width:100%">
+								  </div>
+								
+								  <div class="mySlides fade">
+								    <img src="images/lighting_ss/0014.jpg" style="width:100%">
+								  </div>
+								</div>
 								<span class="image main"><img src="images/lighting_comp.jpg" alt="" /></span>
 								<p>Aliso AV knows how to wow your partiers with our high quality lighting. Our lighting designers can sync all of our lighting fixtures to the current tune, really getting the dance floor going.</p>
 							</article>
