--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<!-- Audio & DJ -->
 							<article id="audio">
 								<h2 class="major">Audio</h2>
-								<span class="image left"><img src="images/board.jpg" alt="" /></span>
+								<span class="image left"><img src="images/eq.jpg" alt="" /></span>
 								<p>Aliso AV has got your back when it comes to audio. Aliso AV provides professional audio for every event from a formal dance to the spookiest of Halloween parties. Audio services include a DJ upon request or simply a playlist.</p>
 								<h3 class="major">Professional Hype</h3>
 								<span class="image right"><img src="images/dj.jpg" alt="" /></span>
