--- a/index.html
+++ b/index.html
@@ -45,9 +45,26 @@
 								<h2 class="major">Audio</h2>
 								<span class="image left"><img src="images/eq.jpg" alt="" /></span>
 								<p>Aliso AV has got your back when it comes to audio. Aliso AV provides professional audio for every event from a formal dance to the spookiest of Halloween parties. Audio services include a DJ upon request or simply a playlist.</p>
-								<h3 class="major">Professional Hype</h3>
+								<h3 class="major" style="float:right">Professional Hype</h3>
 								<span class="image right"><img src="images/dj.jpg" alt="" /></span>
 								<p>Aliso AV's top notch DJs know how to get a party started! Aliso AV's DJs can create hype for any situation, bringing a party from 0 to rave-like in seconds.</p>
+								<!-- Slideshow container -->
+								<div class="slideshow-container">
+								  <!-- Full-width images with number and caption text -->
+									<div class="mySlides fade">
+										<img src="images/audio_ss/pioneerdj.jpg" style="width:100%">
+									</div>
+									<div class="mySlides fade">
+										<img src="images/audio_ss/k-2.jpg" style="width:100%">
+								  	</div>
+									<div class="mySlides fade">
+										<img src="images/audio_ss/faders.jpg" style="width:100%">
+									</div>
+									<div class="mySlides fade">
+										<img src="images/audio_ss/k12-2.jpg" style="width:100%">
+								  	</div>
+								</div>
+
 							</article>
 
 						<!-- Lights -->
