--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 								<div class="slideshow-container">
 								  <!-- Full-width images with number and caption text -->
 									<div class="mySlides1 fade">
-										<img src="images/audio_ss/pioneerdj.jpg" style="width:100%, border-radius=4px">
+										<img src="images/audio_ss/pioneerdj.jpg" style="width:100%">
 									</div>
 									<div class="mySlides1 fade">
-										<img src="images/audio_ss/k-2.jpg" style="width:100%, border-radius=4px">
+										<img src="images/audio_ss/k-2.jpg" style="width:100%">
 								  	</div>
 									<div class="mySlides1 fade">
-										<img src="images/audio_ss/faders.jpg" style="width:100%, border-radius=4px">
+										<img src="images/audio_ss/faders.jpg" style="width:100%">
 									</div>
 									<div class="mySlides1 fade">
-										<img src="images/audio_ss/k12-2.jpg" style="width:100%, border-radius=4px">
+										<img src="images/audio_ss/k12-2.jpg" style="width:100%">
 								  	</div>
 								</div>
 
@@ -75,11 +75,11 @@
 								
 								  <!-- Full-width images with number and caption text -->
 								  <div class="mySlides2 fade">
-								    <img src="images/lighting_ss/lighting_comp.jpg" style="width:100%, border-radius=4px">
+								    <img src="images/lighting_ss/lighting_comp.jpg" style="width:100%">
 								  </div>
 								
 								  <div class="mySlides2 fade">
-								    <img src="images/lighting_ss/0014.jpg" style="width:100%, border-radius=4px">
+								    <img src="images/lighting_ss/0014.jpg" style="width:100%">
 								  </div>
 								</div>
  								<!-- <span class="image main"><img src="images/lighting_comp.jpg" alt="" /></span> -->
