--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 								<span class="image right"><img src="images/dj.jpg" alt="" /></span>
 								<p>Aliso AV's top notch DJs know how to get a party started! Our DJs can create hype for any situation, bringing a party from 0 to rave-like in seconds.</p>
 								<!-- Slideshow container -->
+								<hr style="background-color: transparent;">
 								<div class="slideshow-container">
 								  <!-- Full-width images with number and caption text -->
 									<div class="mySlides1 fade">
