--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 								<span class="image left"><img src="images/eq.jpg" alt="" /></span>
 								<p>Aliso AV has got your back when it comes to audio. We provide professional audio for every event from a formal dance to the spookiest of Halloween parties. Audio services include a DJ upon request or simply a playlist.</p>
 								<h3 class="major">Professional Hype</h3>
-								<span class="image right"><img src="images/dj.jpg" alt="" /></span>
+								<span class="image right" style="postion:absolute;, top:-5px;"><img src="images/dj.jpg" alt="" /></span>
 								<p>Aliso AV's top notch DJs know how to get a party started! Our DJs can create hype for any situation, bringing a party from 0 to rave-like in seconds.</p>
 								<!-- Slideshow container -->
-								<hr style="color: rgba(0,0,0,0);, border: none;">
+								<hr>
 								<div class="slideshow-container">
 								  <!-- Full-width images with number and caption text -->
 									<div class="mySlides1 fade">
