--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<p>Our mission is to deliver high-quality event experiences regardless of financial means. We are committed to providing reasonable cost options, ensuring that everyone can participate in and enjoy the excellence we offer. Through innovation, we aim to maintain the highest standards in our productions.</p>
 								<h2 class="major">Founders</h2>
 								<div id ="Wyatt" style="display:inline-block">
-									<span class="image left"><img src="images/wyatt.JPG" alt="" /></span>
+									<span class="image left"><img src="images/wyatt.jpg" alt="" /></span>
 									<h3>Wyatt</h3>
 									<p>Insert bio</p>
 								</div>
