add new contact form

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+<!-- 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -148,7 +148,9 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
+								</form> -->
+								<iframe src="https://www.cognitoforms.com/f/8HG3uwfnZEi-cw6nUZ1w3A/1" allow="payment" style="border:0;width:100%;" height="500"></iframe>
+								<script src="https://www.cognitoforms.com/f/iframe.js"></script>
 								<footer>
 									<p class="copyright">28000 Wolverine Way, Aliso Viejo CA 92656</p>
 									<p class="copyright"><a href="mailto:example@example.com">example@example.com</a></p>
