--- a/index.html
+++ b/index.html
@@ -159,12 +159,17 @@
 									<li><a href="https://www.instagram.com" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
+						<!-- Unused -->
+							<article id="easter">
+								<h2 class="major">You found me!</h2>
+								<p>You found the easter egg! This is the web developer for Aliso AV, Troy Kinney, and I wanted to say hi! I hope you're having a great day and that we get to serve you soon!</p>
+							</article>
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Aliso AV 4024 | Design: Troy Kinney | Photos: Russ Gohl | Code Credit: <a href="www.html5up.net">HTML5 UP</a></p>
+						<p class="copyright">&copy; Aliso AV 4024 | <a href="#easter" style="text-decoration: none;">Design: Troy Kinney</a> | Photos: Russ Gohl | Code Credit: <a href="www.html5up.net">HTML5 UP</a></p>
 					</footer>
 
 			</div>
