added bio for troy

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								<div id ="Troy" style="display:inline-block">
 									<span class="image right"><img src="images/troy.JPEG" alt="" /></span>
 									<h3>Troy</h3>
-									<p>Insert bio</p>
+									<p>Troy is a high school student with a passion for technology, actively involved in his school’s ASB tech team. He enjoys working with audio-visual equipment and exploring the latest in tech, and he’s also an avid gamer in his free time.</p>
 								</div>
 							</article>
 						
