--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								<div id ="Troy" style="display:inline-block">
 									<span class="image right"><img src="images/troy.JPEG" alt="" /></span>
 									<h3>Troy</h3>
-									<p>Troy is a high school student with a passion for technology, actively involved in his school’s ASB tech team. He enjoys working with audio-visual equipment and exploring the latest in tech, and he’s also an avid gamer in his free time.</p>
+									<p>Hi, I’m Troy! I’m a high school student who loves working with tech, especially through my role on the ASB tech team. I really enjoy helping others, whether it’s setting up audio-visual equipment or finding solutions to tech problems. In my free time, you’ll usually find me gaming or nerding out over the latest gadgets.</p>
 								</div>
 							</article>
 						
