--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Aliso AV 4024 | <a href="#easter" style="text-decoration: none;">Design: Troy Kinney</a> | Photos: Russ Gohl | Code Credit: <a href="www.html5up.net">HTML5 UP</a></p>
+						<p class="copyright" style="text-decoration: none;">&copy; Aliso AV 4024 | <a href="#easter">Design: Troy Kinney</a> | Photos: Russ Gohl | Code Credit: <a href="www.html5up.net">HTML5 UP</a></p>
 					</footer>
 
 			</div>
