Fix html5up link

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright" style="text-decoration-line: none;">&copy; Aliso AV 4024 | <a href="#easter">Design: Troy Kinney</a> | Photos: Russ Gohl | Code Credit: <a href="www.html5up.net">HTML5 UP</a></p>
+						<p class="copyright" style="text-decoration-line: none;">&copy; Aliso AV 4024 | <a href="#easter">Design: Troy Kinney</a> | Photos: Russ Gohl | Code Credit: <a href="https://www.html5up.net">HTML5 UP</a></p>
 					</footer>
 
 			</div>
