--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright" style="text-decoration-line: none;">&copy; Aliso AV 4024 | Design: Troy Kinney | Photos: Russ Gohl | Code Credit: <a href="https://www.html5up.net">HTML5 UP</a></p>
+						<p class="copyright" style="text-decoration-line: none;">&copy; Aliso AV 4024 | Design: Troy Kinney | Photos: <a href="https://www.instagram.com/gohl.snapshots?igsh=MzRlODBiNWFlZA==">Russ Gohl</a> | Code Credit: <a href="https://www.html5up.net">HTML5 UP</a></p>
 					</footer>
 
 			</div>
