--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								    <img src="images/lighting_ss/0014.jpg" style="width:100%">
 								  </div>
 								</div>
- 								<!-- <span class="image main"><img src="images/lighting_comp.jpg" alt="" /></span> -->
+								<span class="image right" style="margin-top:-30px;"><img src="images/threelights.jpeg" alt="" /></span>
 								<p>Aliso AV knows how to wow your partiers with our high quality lighting. Our lighting designers can sync all of our lighting fixtures to the current tune, really getting the dance floor going.</p>
 							</article>
 						
