--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 -->
 <html>
 	<head>
+		<!--SEO crap-->
 		<title>Aliso AV</title>
+		<link rel="icon" href="/path/to/favicon.ico">
+		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,6 +34,7 @@
 								<li><a href="#lights">Lighting</a></li>
 								<li><a href="#FX">Special Effects</a></li>
 								<li><a href="#about">About</a></li>
+								<li><a href="#whatwedo">What We Do</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -124,7 +128,11 @@
 									<p>Hi, I’m Troy! I’m a high school student who loves working with tech, especially through my role on the ASB tech team. I really enjoy helping others, whether it’s setting up audio-visual equipment or finding solutions to tech problems. In my free time, you’ll usually find me gaming or nerding out over the latest gadgets.</p>
 								</div>
 							</article>
-						
+						<!-- What We Do -->
+							<article id="whatwedo">
+								<h2 class="major">What We Do</h2>
+								<p>At Aliso AV, we specialize in creating unforgettable event experiences with our focus on crowd engagement and creative design. We provide complete event production services, working closely with clients to ensure every show is customized to their vision. Whether it’s a high-energy school dance or a carefully planned show, our goal is to elevate the atmosphere and leave a lasting impression. /n Our team is dedicated to making each event one to remember, using a combination of lighting, audio, and special effects to get the crowd hyped and create the perfect vibe for any occasion. From concept to execution, we bring professional expertise to every project, making sure the event not only runs smoothly but keeps the energy up from start to finish.</p>
+							</article>
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
