--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 								<li><a href="#audio">Audio</a></li>
 								<li><a href="#lights">Lighting</a></li>
 								<li><a href="#FX">Special Effects</a></li>
-								<li><a href="#about">About</a></li>
-								<!--<li><a href="#whatwedo">What We Do</a></li>-->
+								<li><a href="#wwd">What We Do</a></li>
+								<li><a href="#about">About</a></li>>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -129,7 +129,7 @@
 								</div>
 							</article>
 						<!-- What We Do -->
-							<article id="whatwedo">
+							<article id="wwd">
 								<h2 class="major">What We Do</h2>
 								<p>At Aliso AV, we specialize in creating unforgettable event experiences with our focus on crowd engagement and creative design. We provide complete event production services, working closely with clients to ensure every show is customized to their vision. Whether it’s a high-energy school dance or a carefully planned show, our goal is to elevate the atmosphere and leave a lasting impression. <br><br> Our team is dedicated to making each event one to remember, using a combination of lighting, audio, and special effects to get the crowd hyped and create the perfect vibe for any occasion. From concept to execution, we bring professional expertise to every project, making sure the event not only runs smoothly but keeps the energy up from start to finish.</p>
 							</article>
