--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#lights">Lighting</a></li>
 								<li><a href="#FX">Special Effects</a></li>
 								<li><a href="#wwd">What We Do</a></li>
-								<li><a href="#about">About</a></li>>
+								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
