--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<!--SEO crap-->
 		<title>Aliso AV</title>
 		<link rel="icon" href="/path/to/favicon.ico">
+		<meta name="description" content="Aliso AV provides professional audio-visual productions for your next school or corporate event.">
 		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
