--- a/index.html
+++ b/index.html
@@ -101,15 +101,12 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
+								<li><input type="button" onClick="document.getElementById('mission').scrollIntoView();">Mission Statement</input></li>
+								<li><input type="button" onClick="document.getElementById('wwd2').scrollIntoView();">What We Do</input></li>
+								<li><input type="button" onClick="document.getElementById('founders').scrollIntoView();">Founders</input></li>
 
-								<nav>
-									<ul>
-										<li><input type="button" onClick="document.getElementById('mission').scrollIntoView();"/>Mission Statement</li>
-										<li><input type="button" onClick="document.getElementById('wwd2').scrollIntoView();"/>What We Do</li>
-										<li><input type="button" onClick="document.getElementById('founders').scrollIntoView();"/>Founders</li>
-									</ul>
-								</nav>
-								<span class="image main" id="mission"><img src="images/pic03.jpg" alt="" /></span>
+								<h2 class="major" id="mission">About</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Aliso AV is based out of Aliso Niguel High School's ASB media department in Aliso Viejo, CA. We serve our Aliso area schools and surrounding communities.</p>
 								<p>Our mission is to deliver high-quality event experiences regardless of financial means. We are committed to providing reasonable cost options, ensuring that everyone can participate in and enjoy the excellence we offer. Through innovation, we aim to maintain the highest standards in our productions.</p>
 								
