fix about page toc buttons

--- a/index.html
+++ b/index.html
@@ -101,16 +101,19 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<li><input type="button" onClick="document.getElementById('mission').scrollIntoView();">Mission Statement</input></li>
-								<li><input type="button" onClick="document.getElementById('wwd2').scrollIntoView();">What We Do</input></li>
-								<li><input type="button" onClick="document.getElementById('founders').scrollIntoView();">Founders</input></li>
-
-								<h2 class="major" id="mission">About</h2>
+								<div style="display: inline-block;">
+									<ul style="float: left;">
+										<li><input type="button" onClick="document.getElementById('mission').scrollIntoView();" value="Mission Statement"></li>
+										<li><input type="button" onClick="document.getElementById('wwd2').scrollIntoView();" value="What We Do"></li>
+										<li><input type="button" onClick="document.getElementById('founders').scrollIntoView();" value="Founders & Current Team"></li>
+									</ul>
+								</div>
+								<h2 class="major" id="mission">Mission Statement</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Aliso AV is based out of Aliso Niguel High School's ASB media department in Aliso Viejo, CA. We serve our Aliso area schools and surrounding communities.</p>
 								<p>Our mission is to deliver high-quality event experiences regardless of financial means. We are committed to providing reasonable cost options, ensuring that everyone can participate in and enjoy the excellence we offer. Through innovation, we aim to maintain the highest standards in our productions.</p>
 								
 								<h2 class="major" id="wwd2">What We Do</h2>
+								<p>Aliso AV is based out of Aliso Niguel High School's ASB media department in Aliso Viejo, CA. We serve our Aliso area schools and surrounding communities.</p>
 								<p>At Aliso AV, we specialize in creating unforgettable event experiences with our focus on crowd engagement and creative design. We provide complete event production services, working closely with clients to ensure every show is customized to their vision. Whether it’s a high-energy school dance or a carefully planned show, our goal is to elevate the atmosphere and leave a lasting impression. <br><br> Our team is dedicated to making each event one to remember, using a combination of lighting, audio, and special effects to get the crowd hyped and create the perfect vibe for any occasion. From concept to execution, we bring professional expertise to every project, making sure the event not only runs smoothly but keeps the energy up from start to finish.</p>
 								
 								<h2 class="major" id="founders">Founders</h2>
