smoothened about TOC buttons

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<div style="display: inline-block;">
-									<ul style="float: left;">
-										<li><input type="button" onClick="document.getElementById('mission').scrollIntoView();" value="Mission Statement"></li>
-										<li><input type="button" onClick="document.getElementById('wwd2').scrollIntoView();" value="What We Do"></li>
-										<li><input type="button" onClick="document.getElementById('founders').scrollIntoView();" value="Founders & Current Team"></li>
-									</ul>
+
+									<input type="button" onClick="document.getElementById('mission').scrollIntoView(smooth);" value="Mission Statement">
+									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView(smooth);" value="What We Do">
+									<input type="button" onClick="document.getElementById('founders').scrollIntoView(smooth);" value="Founders & Current Team">
+
 								</div>
 								<h2 class="major" id="mission">Mission Statement</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
