fixed about TOC i hope

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 								<h2 class="major">About</h2>
 								<div style="display: inline-block;">
 
-									<input type="button" onClick="document.getElementById('mission').scrollIntoView(smooth);" value="Mission Statement">
-									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView(smooth);" value="What We Do">
-									<input type="button" onClick="document.getElementById('founders').scrollIntoView(smooth);" value="Founders & Current Team">
+									<input type="button" onClick="document.getElementById('mission').scrollIntoView({behavior:'Smooth'});" value="Mission Statement">
+									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({behavior:'Smooth'});" value="What We Do">
+									<input type="button" onClick="document.getElementById('founders').scrollIntoView({behavior:'Smooth'});" value="Founders">
 
 								</div>
 								<h2 class="major" id="mission">Mission Statement</h2>
