fix about TOC i hope

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<div style="display: inline-block;">
+								<div style="display: inline-block; margins:auto; margin-bottom:25px; margin-top:25px;">
 
-									<input type="button" onClick="document.getElementById('mission').scrollIntoView({behavior:'Smooth'});" value="Mission Statement">
-									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({behavior:'Smooth'});" value="What We Do">
-									<input type="button" onClick="document.getElementById('founders').scrollIntoView({behavior:'Smooth'});" value="Founders">
+									<input type="button" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'end', inline: 'nearest' });" value="Mission Statement">
+									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'end', inline: 'nearest' });" value="What We Do">
+									<input type="button" onClick="document.getElementById('founders').scrollIntoView({ behavior: 'smooth', block: 'end', inline: 'nearest' });" value="Founders">
 
 								</div>
 								<h2 class="major" id="mission">Mission Statement</h2>
