Adjust ‘About’ TxtSz

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 						
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
-								<div style="display: inline-block; margins:auto; margin-bottom:25px; margin-top:25px;">
+								<h1 class="major">About</h1>
+								<div style="display: inline-block; margins:auto; margin-bottom:25px;">
 
 									<input type="button" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Mission Statement">
 									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="What We Do">
