--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<!-- About -->
 							<article id="about">
 								<h1 class="major">About</h1>
-								<div style="display: inline-block; margins:auto; margin-bottom:25px;">
+								<div style="display: inline-block; margins:auto; margin-bottom:25px; display: flex; justify-content: center;">
 
 									<input type="button" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Mission Statement">
 									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="What We Do">
@@ -120,24 +120,28 @@
 								<div id ="Wyatt" style="display:inline-block">
 									<span class="image left"><img src="images/wyatt.jpg" alt="" /></span>
 									<h3>Wyatt</h3>
+									<h4>Commisioner | Lighting</h4>
 									<p>Insert bio</p>
 								</div>
 								<hr>
 								<div id ="Daniel" style="display:inline-block">
 									<span class="image right"><img src="images/daniel.JPEG" alt="" /></span>
 									<h3>Daniel</h3>
+									<h4>Lighting Designer</h4>
 									<p>Insert bio</p>
 								</div>
 								<hr>
 								<div id ="Russ" style="display:inline-block">
 									<span class="image left"><img src="images/russ.JPEG" alt="" /></span>
 									<h3>Russ</h3>
+									<h4>Audio Technician | DJ</h4>
 									<p>Insert bio</p>
 								</div>
 								<hr>
 								<div id ="Troy" style="display:inline-block">
 									<span class="image right"><img src="images/troy.JPEG" alt="" /></span>
 									<h3>Troy</h3>
+									<h4>Audio Technician</h4>
 									<p>Hi, I’m Troy! I’m a high school student who loves working with tech, especially through my role on the ASB tech team. I really enjoy helping others, whether it’s setting up audio-visual equipment or finding solutions to tech problems. In my free time, you’ll usually find me gaming or nerding out over the latest gadgets.</p>
 								</div>
 							</article>
