--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 								<h1 class="major">About</h1>
 								<div style="display: inline-block; margins:auto; margin-bottom:25px; display: flex; justify-content: center;">
 
-									<input type="button" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Mission Statement">
-									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="What We Do">
-									<input type="button" onClick="document.getElementById('founders').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Founders">
+									<input type="button" class="nav" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Mission Statement">
+									<input type="button" class="nav" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="What We Do">
+									<input type="button" class="nav" onClick="document.getElementById('founders').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Founders">
 
 								</div>
 								<h2 class="major" id="mission">Mission Statement</h2>
